// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`use-lunatic() > getData() > should only return requested variables 1`] = `
{
  "CALCULATED": {},
  "COLLECTED": {
    "COMMENT": {
      "COLLECTED": "Mon commentaire",
    },
  },
  "EXTERNAL": {},
}
`;

exports[`use-lunatic() > getData() > should return calculated values 1`] = `
{
  "CALCULATED": {
    "FILTER_RESULT_AGE_CHAR": [],
    "FILTER_RESULT_AUDIENCE_SHARE": true,
    "FILTER_RESULT_BIRTH_CHARACTER": true,
    "FILTER_RESULT_CITY": true,
    "FILTER_RESULT_CLOWNING": true,
    "FILTER_RESULT_COMMENT": true,
    "FILTER_RESULT_DATEFIRST": true,
    "FILTER_RESULT_DATEYYYY": true,
    "FILTER_RESULT_DATEYYYYMM": true,
    "FILTER_RESULT_DURATIOND": true,
    "FILTER_RESULT_DURATIONH": true,
    "FILTER_RESULT_DURATIONHH": true,
    "FILTER_RESULT_DURATIONHM": true,
    "FILTER_RESULT_DURATIONM": true,
    "FILTER_RESULT_DURATIONY": true,
    "FILTER_RESULT_DURATIONYM": true,
    "FILTER_RESULT_FAVCHAR": [],
    "FILTER_RESULT_FAVOURITE_CHAR": true,
    "FILTER_RESULT_FEELCHAREV": true,
    "FILTER_RESULT_ICE_FLAVOUR": true,
    "FILTER_RESULT_LAST_FOOD_SHOPPING": true,
    "FILTER_RESULT_LEAVDURATION": true,
    "FILTER_RESULT_MAYOR": true,
    "FILTER_RESULT_MEMORY_CHAR": [],
    "FILTER_RESULT_NAME_CHAR": [],
    "FILTER_RESULT_NB_CHAR": true,
    "FILTER_RESULT_NUCLEAR_CHARACTER": true,
    "FILTER_RESULT_PERCENTAGE_EXPENSES": true,
    "FILTER_RESULT_PET": true,
    "FILTER_RESULT_PRODUCER": true,
    "FILTER_RESULT_READY": true,
    "FILTER_RESULT_SEASON_NUMBER": true,
    "FILTER_RESULT_STATE": true,
    "FILTER_RESULT_SURVEY_COMMENT": true,
    "FILTER_RESULT_TRAVEL": true,
    "SUM_EXPENSES": 0,
    "YEAR": "2020",
  },
  "COLLECTED": {
    "AGE_CHAR": {
      "COLLECTED": [],
    },
    "AUDIENCE_SHARE": {
      "COLLECTED": null,
    },
    "BIRTH_CHARACTER1": {
      "COLLECTED": null,
    },
    "BIRTH_CHARACTER2": {
      "COLLECTED": null,
    },
    "BIRTH_CHARACTER3": {
      "COLLECTED": null,
    },
    "BIRTH_CHARACTER4": {
      "COLLECTED": null,
    },
    "BIRTH_CHARACTER5": {
      "COLLECTED": null,
    },
    "CITY": {
      "COLLECTED": null,
    },
    "CLOWNING11": {
      "COLLECTED": null,
    },
    "CLOWNING12": {
      "COLLECTED": null,
    },
    "CLOWNING21": {
      "COLLECTED": null,
    },
    "CLOWNING22": {
      "COLLECTED": null,
    },
    "CLOWNING31": {
      "COLLECTED": null,
    },
    "CLOWNING32": {
      "COLLECTED": null,
    },
    "CLOWNING41": {
      "COLLECTED": null,
    },
    "CLOWNING42": {
      "COLLECTED": null,
    },
    "COMMENT": {
      "COLLECTED": "Mon commentaire",
    },
    "DATEFIRST": {
      "COLLECTED": null,
    },
    "DATEYYYY": {
      "COLLECTED": null,
    },
    "DATEYYYYMM": {
      "COLLECTED": null,
    },
    "DURATIOND": {
      "COLLECTED": null,
    },
    "DURATIONH": {
      "COLLECTED": null,
    },
    "DURATIONHH": {
      "COLLECTED": null,
    },
    "DURATIONHM": {
      "COLLECTED": null,
    },
    "DURATIONM": {
      "COLLECTED": null,
    },
    "DURATIONY": {
      "COLLECTED": null,
    },
    "DURATIONYM": {
      "COLLECTED": null,
    },
    "FAVCHAR": {
      "COLLECTED": [],
    },
    "FAVOURITE_CHAR1": {
      "COLLECTED": [],
    },
    "FEELCHAREV1": {
      "COLLECTED": null,
    },
    "FEELCHAREV2": {
      "COLLECTED": null,
    },
    "FEELCHAREV3": {
      "COLLECTED": null,
    },
    "FEELCHAREV4": {
      "COLLECTED": null,
    },
    "ICE_FLAVOUR1": {
      "COLLECTED": null,
    },
    "ICE_FLAVOUR2": {
      "COLLECTED": null,
    },
    "ICE_FLAVOUR3": {
      "COLLECTED": null,
    },
    "ICE_FLAVOUR4": {
      "COLLECTED": null,
    },
    "LAST_FOOD_SHOPPING11": {
      "COLLECTED": null,
    },
    "LAST_FOOD_SHOPPING21": {
      "COLLECTED": null,
    },
    "LAST_FOOD_SHOPPING31": {
      "COLLECTED": null,
    },
    "LAST_FOOD_SHOPPING41": {
      "COLLECTED": null,
    },
    "LAST_FOOD_SHOPPING51": {
      "COLLECTED": null,
    },
    "LAST_FOOD_SHOPPING61": {
      "COLLECTED": null,
    },
    "LAST_FOOD_SHOPPING71": {
      "COLLECTED": null,
    },
    "LAST_FOOD_SHOPPING81": {
      "COLLECTED": null,
    },
    "LEAVDURATION11": {
      "COLLECTED": null,
    },
    "LEAVDURATION12": {
      "COLLECTED": null,
    },
    "LEAVDURATION21": {
      "COLLECTED": null,
    },
    "LEAVDURATION22": {
      "COLLECTED": null,
    },
    "LEAVDURATION31": {
      "COLLECTED": null,
    },
    "LEAVDURATION32": {
      "COLLECTED": null,
    },
    "LEAVDURATION41": {
      "COLLECTED": null,
    },
    "LEAVDURATION42": {
      "COLLECTED": null,
    },
    "LEAVDURATION51": {
      "COLLECTED": null,
    },
    "LEAVDURATION52": {
      "COLLECTED": null,
    },
    "MAYOR": {
      "COLLECTED": null,
    },
    "MEMORY_CHAR": {
      "COLLECTED": [],
    },
    "NAME_CHAR": {
      "COLLECTED": [],
    },
    "NB_CHAR": {
      "COLLECTED": null,
    },
    "NUCLEAR_CHARACTER1": {
      "COLLECTED": null,
    },
    "NUCLEAR_CHARACTER2": {
      "COLLECTED": null,
    },
    "NUCLEAR_CHARACTER3": {
      "COLLECTED": null,
    },
    "NUCLEAR_CHARACTER4": {
      "COLLECTED": null,
    },
    "PERCENTAGE_EXPENSES11": {
      "COLLECTED": null,
    },
    "PERCENTAGE_EXPENSES21": {
      "COLLECTED": null,
    },
    "PERCENTAGE_EXPENSES31": {
      "COLLECTED": null,
    },
    "PERCENTAGE_EXPENSES41": {
      "COLLECTED": null,
    },
    "PERCENTAGE_EXPENSES51": {
      "COLLECTED": null,
    },
    "PERCENTAGE_EXPENSES61": {
      "COLLECTED": null,
    },
    "PERCENTAGE_EXPENSES71": {
      "COLLECTED": null,
    },
    "PERCENTAGE_EXPENSES81": {
      "COLLECTED": null,
    },
    "PET1": {
      "COLLECTED": null,
    },
    "PET2": {
      "COLLECTED": null,
    },
    "PET3": {
      "COLLECTED": null,
    },
    "PET4": {
      "COLLECTED": null,
    },
    "PRODUCER": {
      "COLLECTED": null,
    },
    "READY": {
      "COLLECTED": true,
    },
    "SEASON_NUMBER": {
      "COLLECTED": null,
    },
    "STATE": {
      "COLLECTED": null,
    },
    "SURVEY_COMMENT": {
      "COLLECTED": null,
    },
    "TRAVEL11": {
      "COLLECTED": null,
    },
    "TRAVEL12": {
      "COLLECTED": null,
    },
    "TRAVEL13": {
      "COLLECTED": null,
    },
    "TRAVEL14": {
      "COLLECTED": null,
    },
    "TRAVEL15": {
      "COLLECTED": null,
    },
    "TRAVEL16": {
      "COLLECTED": null,
    },
    "TRAVEL21": {
      "COLLECTED": null,
    },
    "TRAVEL22": {
      "COLLECTED": null,
    },
    "TRAVEL23": {
      "COLLECTED": null,
    },
    "TRAVEL24": {
      "COLLECTED": null,
    },
    "TRAVEL25": {
      "COLLECTED": null,
    },
    "TRAVEL26": {
      "COLLECTED": null,
    },
    "TRAVEL31": {
      "COLLECTED": null,
    },
    "TRAVEL32": {
      "COLLECTED": null,
    },
    "TRAVEL33": {
      "COLLECTED": null,
    },
    "TRAVEL34": {
      "COLLECTED": null,
    },
    "TRAVEL35": {
      "COLLECTED": null,
    },
    "TRAVEL36": {
      "COLLECTED": null,
    },
    "TRAVEL41": {
      "COLLECTED": null,
    },
    "TRAVEL42": {
      "COLLECTED": null,
    },
    "TRAVEL43": {
      "COLLECTED": null,
    },
    "TRAVEL44": {
      "COLLECTED": null,
    },
    "TRAVEL45": {
      "COLLECTED": null,
    },
    "TRAVEL46": {
      "COLLECTED": null,
    },
  },
  "EXTERNAL": {
    "LAST_BROADCAST": undefined,
  },
}
`;

exports[`use-lunatic() > getData() > should return every value 1`] = `
{
  "CALCULATED": {},
  "COLLECTED": {
    "AGE_CHAR": {
      "COLLECTED": [],
    },
    "AUDIENCE_SHARE": {
      "COLLECTED": null,
    },
    "BIRTH_CHARACTER1": {
      "COLLECTED": null,
    },
    "BIRTH_CHARACTER2": {
      "COLLECTED": null,
    },
    "BIRTH_CHARACTER3": {
      "COLLECTED": null,
    },
    "BIRTH_CHARACTER4": {
      "COLLECTED": null,
    },
    "BIRTH_CHARACTER5": {
      "COLLECTED": null,
    },
    "CITY": {
      "COLLECTED": null,
    },
    "CLOWNING11": {
      "COLLECTED": null,
    },
    "CLOWNING12": {
      "COLLECTED": null,
    },
    "CLOWNING21": {
      "COLLECTED": null,
    },
    "CLOWNING22": {
      "COLLECTED": null,
    },
    "CLOWNING31": {
      "COLLECTED": null,
    },
    "CLOWNING32": {
      "COLLECTED": null,
    },
    "CLOWNING41": {
      "COLLECTED": null,
    },
    "CLOWNING42": {
      "COLLECTED": null,
    },
    "COMMENT": {
      "COLLECTED": "Mon commentaire",
    },
    "DATEFIRST": {
      "COLLECTED": null,
    },
    "DATEYYYY": {
      "COLLECTED": null,
    },
    "DATEYYYYMM": {
      "COLLECTED": null,
    },
    "DURATIOND": {
      "COLLECTED": null,
    },
    "DURATIONH": {
      "COLLECTED": null,
    },
    "DURATIONHH": {
      "COLLECTED": null,
    },
    "DURATIONHM": {
      "COLLECTED": null,
    },
    "DURATIONM": {
      "COLLECTED": null,
    },
    "DURATIONY": {
      "COLLECTED": null,
    },
    "DURATIONYM": {
      "COLLECTED": null,
    },
    "FAVCHAR": {
      "COLLECTED": [],
    },
    "FAVOURITE_CHAR1": {
      "COLLECTED": [],
    },
    "FEELCHAREV1": {
      "COLLECTED": null,
    },
    "FEELCHAREV2": {
      "COLLECTED": null,
    },
    "FEELCHAREV3": {
      "COLLECTED": null,
    },
    "FEELCHAREV4": {
      "COLLECTED": null,
    },
    "ICE_FLAVOUR1": {
      "COLLECTED": null,
    },
    "ICE_FLAVOUR2": {
      "COLLECTED": null,
    },
    "ICE_FLAVOUR3": {
      "COLLECTED": null,
    },
    "ICE_FLAVOUR4": {
      "COLLECTED": null,
    },
    "LAST_FOOD_SHOPPING11": {
      "COLLECTED": null,
    },
    "LAST_FOOD_SHOPPING21": {
      "COLLECTED": null,
    },
    "LAST_FOOD_SHOPPING31": {
      "COLLECTED": null,
    },
    "LAST_FOOD_SHOPPING41": {
      "COLLECTED": null,
    },
    "LAST_FOOD_SHOPPING51": {
      "COLLECTED": null,
    },
    "LAST_FOOD_SHOPPING61": {
      "COLLECTED": null,
    },
    "LAST_FOOD_SHOPPING71": {
      "COLLECTED": null,
    },
    "LAST_FOOD_SHOPPING81": {
      "COLLECTED": null,
    },
    "LEAVDURATION11": {
      "COLLECTED": null,
    },
    "LEAVDURATION12": {
      "COLLECTED": null,
    },
    "LEAVDURATION21": {
      "COLLECTED": null,
    },
    "LEAVDURATION22": {
      "COLLECTED": null,
    },
    "LEAVDURATION31": {
      "COLLECTED": null,
    },
    "LEAVDURATION32": {
      "COLLECTED": null,
    },
    "LEAVDURATION41": {
      "COLLECTED": null,
    },
    "LEAVDURATION42": {
      "COLLECTED": null,
    },
    "LEAVDURATION51": {
      "COLLECTED": null,
    },
    "LEAVDURATION52": {
      "COLLECTED": null,
    },
    "MAYOR": {
      "COLLECTED": null,
    },
    "MEMORY_CHAR": {
      "COLLECTED": [],
    },
    "NAME_CHAR": {
      "COLLECTED": [],
    },
    "NB_CHAR": {
      "COLLECTED": null,
    },
    "NUCLEAR_CHARACTER1": {
      "COLLECTED": null,
    },
    "NUCLEAR_CHARACTER2": {
      "COLLECTED": null,
    },
    "NUCLEAR_CHARACTER3": {
      "COLLECTED": null,
    },
    "NUCLEAR_CHARACTER4": {
      "COLLECTED": null,
    },
    "PERCENTAGE_EXPENSES11": {
      "COLLECTED": null,
    },
    "PERCENTAGE_EXPENSES21": {
      "COLLECTED": null,
    },
    "PERCENTAGE_EXPENSES31": {
      "COLLECTED": null,
    },
    "PERCENTAGE_EXPENSES41": {
      "COLLECTED": null,
    },
    "PERCENTAGE_EXPENSES51": {
      "COLLECTED": null,
    },
    "PERCENTAGE_EXPENSES61": {
      "COLLECTED": null,
    },
    "PERCENTAGE_EXPENSES71": {
      "COLLECTED": null,
    },
    "PERCENTAGE_EXPENSES81": {
      "COLLECTED": null,
    },
    "PET1": {
      "COLLECTED": null,
    },
    "PET2": {
      "COLLECTED": null,
    },
    "PET3": {
      "COLLECTED": null,
    },
    "PET4": {
      "COLLECTED": null,
    },
    "PRODUCER": {
      "COLLECTED": null,
    },
    "READY": {
      "COLLECTED": true,
    },
    "SEASON_NUMBER": {
      "COLLECTED": null,
    },
    "STATE": {
      "COLLECTED": null,
    },
    "SURVEY_COMMENT": {
      "COLLECTED": null,
    },
    "TRAVEL11": {
      "COLLECTED": null,
    },
    "TRAVEL12": {
      "COLLECTED": null,
    },
    "TRAVEL13": {
      "COLLECTED": null,
    },
    "TRAVEL14": {
      "COLLECTED": null,
    },
    "TRAVEL15": {
      "COLLECTED": null,
    },
    "TRAVEL16": {
      "COLLECTED": null,
    },
    "TRAVEL21": {
      "COLLECTED": null,
    },
    "TRAVEL22": {
      "COLLECTED": null,
    },
    "TRAVEL23": {
      "COLLECTED": null,
    },
    "TRAVEL24": {
      "COLLECTED": null,
    },
    "TRAVEL25": {
      "COLLECTED": null,
    },
    "TRAVEL26": {
      "COLLECTED": null,
    },
    "TRAVEL31": {
      "COLLECTED": null,
    },
    "TRAVEL32": {
      "COLLECTED": null,
    },
    "TRAVEL33": {
      "COLLECTED": null,
    },
    "TRAVEL34": {
      "COLLECTED": null,
    },
    "TRAVEL35": {
      "COLLECTED": null,
    },
    "TRAVEL36": {
      "COLLECTED": null,
    },
    "TRAVEL41": {
      "COLLECTED": null,
    },
    "TRAVEL42": {
      "COLLECTED": null,
    },
    "TRAVEL43": {
      "COLLECTED": null,
    },
    "TRAVEL44": {
      "COLLECTED": null,
    },
    "TRAVEL45": {
      "COLLECTED": null,
    },
    "TRAVEL46": {
      "COLLECTED": null,
    },
  },
  "EXTERNAL": {
    "LAST_BROADCAST": undefined,
  },
}
`;
